add style and html

--- a/screens/index.html
+++ b/screens/index.html
@@ -35,7 +35,9 @@
         <section class="about">
             <h3>Some of their characteristics:</h3>
             <ul>
-
+                <li>They like to dine at night on worms and clams, and may also eat algae</li>
+                <li>The horseshoe crab picks up food with appendages located in front of its mouth</li>
+                <li>Because it has no mandible or teeth, they crush the food between their legs before passing it to the mouth</li>
             </ul>
             <hr>
         </section>
@@ -43,7 +45,9 @@
         <section class="top-facts">
             <h3>Top 3 facts about the Horseshoe Crab</h3>
             <ol>
-
+                <li>Horseshoe crabs have been around for more than 300 million years, making them even older than dinosaurs.</li>
+                <li>The horseshoe crab's tail is called the telson. It's long and pointed, and although it looks intimidating, it is not dangerous, poisonous, or used to sting. Horseshoe crabs use the telson to flip themselves over if they happen to be pushed on their backs</li>
+                <li>During full moons, new moons, and high tides in May and June, hundreds of thousands of horseshoe crabs converge on the Delaware Bay to breed</li>
             </ol>
             <hr>
         </section>
