renaming media file

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
             <div class="media">
                 <aside>
-                    <video width="266" height="150" title="Horseshoe crab" src="assets/horseshoe-crab-video.mov" controls autoplay muted></video>
-                    <video width="266" height="150" title="Horseshoe crab" src="assets/horseshoe-crab-video.mov" controls></video>
+                    <video width="266" height="150" title="Horseshoe crab" src="assets/media.mov" controls autoplay muted></video>
+                    <video width="266" height="150" title="Horseshoe crab" src="assets/media.mov" controls></video>
                 </aside>
             </div>
     
